# basil

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod
